--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,99 @@
   margin: 0;
   padding: 0;
 }
-
-.admin-page {
+body {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
+.side-bar {
+  color: #fff;
+  background-color: rgba(25, 10, 53, 0.891);
+  height: 100vh;
   display: flex;
+  align-items: start;
+  justify-content: space-between;
+  flex-direction: column;
+  padding: 0;
+  width: 300px;
+}
+.side-bar.show {
+  padding: 0;
+}
+.side-bar.show .menu li:hover a {
+  transform: translateX(0);
+}
+.side-bar.show .menu li a {
+  display: block;
+  text-align: center;
+}
+.admin-head {
+  padding: 20px 15px;
+}
+.side-bar.show .admin-head {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+.side-bar .menu {
+  margin: 0;
+  padding: 0;
+}
+.side-bar .menu li {
+  list-style: none;
+  cursor: pointer;
+  transition: 0.2s;
+
+  width: 100%;
+}
+.side-bar .menu li.selected {
+  background-color: rgba(255, 255, 255, 0.173);
+}
+.side-bar .menu li:hover {
+  background-color: rgba(255, 255, 255, 0.173);
+}
+.side-bar .menu li.selected a {
+  transform: translateX(15px);
+}
+.side-bar.show .menu li.selected a {
+  transform: translateX(0);
+}
+.menu li a {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  text-decoration: none;
+  color: #fff;
+  padding: 15px;
+  transition: 0.2s;
+  width: 100%;
+}
+.menu li:hover a {
+  transform: translateX(15px);
+}
+.side-footer {
+  width: 100%;
+}
+.side-footer p {
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  cursor: pointer;
+  width: 100%;
+  transition: 0.3s;
+}
+.side-footer p:hover {
+  background-color: rgba(255, 255, 255, 0.173);
+}
+.bi-list {
+  font-size: 24px;
+  cursor: pointer;
+}
+.side-bar.show .side-footer p {
+  display: grid;
+  justify-content: center;
+  font-size: 20px;
 }
