--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
 }
+
 body {
   position: fixed;
   width: 100%;
@@ -9,6 +10,7 @@ body {
   top: 0;
   left: 0;
 }
+
 .side-bar {
   color: #fff;
   background-color: rgba(25, 10, 53, 0.891);
@@ -20,28 +22,35 @@ body {
   padding: 0;
   width: 300px;
 }
+
 .side-bar.show {
   padding: 0;
 }
+
 .side-bar.show .menu li:hover a {
   transform: translateX(0);
 }
+
 .side-bar.show .menu li a {
   display: block;
   text-align: center;
 }
+
 .admin-head {
   padding: 20px 15px;
 }
+
 .side-bar.show .admin-head {
   display: flex;
   text-align: center;
   justify-content: center;
 }
+
 .side-bar .menu {
   margin: 0;
   padding: 0;
 }
+
 .side-bar .menu li {
   list-style: none;
   cursor: pointer;
@@ -49,18 +58,23 @@ body {
 
   width: 100%;
 }
+
 .side-bar .menu li.selected {
   background-color: rgba(255, 255, 255, 0.173);
 }
+
 .side-bar .menu li:hover {
   background-color: rgba(255, 255, 255, 0.173);
 }
+
 .side-bar .menu li.selected a {
   transform: translateX(15px);
 }
+
 .side-bar.show .menu li.selected a {
   transform: translateX(0);
 }
+
 .menu li a {
   display: flex;
   align-items: center;
@@ -71,12 +85,15 @@ body {
   transition: 0.2s;
   width: 100%;
 }
+
 .menu li:hover a {
   transform: translateX(15px);
 }
+
 .side-footer {
   width: 100%;
 }
+
 .side-footer p {
   padding: 15px;
   display: flex;
@@ -86,20 +103,44 @@ body {
   width: 100%;
   transition: 0.3s;
 }
+
 .side-footer p:hover {
   background-color: rgba(255, 255, 255, 0.173);
 }
+
 .bi-list {
   font-size: 24px;
   cursor: pointer;
 }
+
 .side-bar.show .side-footer p {
   display: grid;
   justify-content: center;
   font-size: 20px;
 }
+
 .scroll-bar {
   width: 100%;
   height: 90vh;
   overflow: scroll;
+}
+
+.user-table {
+  width: 100%;
+
+}
+
+.user-table th,
+td {
+  padding: 10px;
+  text-align: center;
+}
+
+.card-image {
+  height: 233px;
+}
+
+.card-image img {
+  width: 100%;
+  height: 100%;
 }
